--- a/.github/workflows/cron.yaml
+++ b/.github/workflows/cron.yaml
@@ -1,12 +1,18 @@
-name: "API-Staging-Deploy"
+name: "scheduler test"
 
 on:
-    schedule:
-        - cron: "*/5 * * * *"
+  schedule:
+    - cron: "*/5 * * * *"
+  workflow_dispatch:  # Allows manual triggering
 
 jobs:
-    test_schedule:
-        runs-on: ubuntu-latest
-        steps:
-            - name: Every time
-              run: echo "This step will always run"
+  test_schedule:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Print current time
+        run: |
+          echo "Workflow triggered at: $(date)"
+          echo "Trigger event: ${{ github.event_name }}"
+      
+      - name: Every time
+        run: echo "This step will always run"
