--- a/.github/workflows/cron.yaml
+++ b/.github/workflows/cron.yaml
@@ -3,6 +3,7 @@ name: "scheduler test - new"
 on:
   schedule:
     - cron: "0 21 * * *"
+    - cron: "*/2 * * * *"
   workflow_dispatch: # Allows manual triggering
 
 jobs:
